2012-12-07  Jason Hood  <adoxa@users.sourceforge.net>

	* winbase.h (LOAD_LIBRARY_AS_IMAGE_RESOURCE): Fix typo.

2012-11-14  Corinna Vinschen  <vinschen@redhat.com>

	* winternl.h (struct _FILE_FULL_DIR_INFORMATION): Rename from
	_FILE_FULL_DIRECTORY_INFORMATION per WDK documentation.
	(struct _FILE_ID_FULL_DIR_INFORMATION): Rename from
	_FILE_ID_FULL_DIRECTORY_INFORMATION.
	(struct _FILE_BOTH_DIR_INFORMATION): Rename from
	_FILE_BOTH_DIRECTORY_INFORMATION.
	(struct _FILE_ID_BOTH_DIR_INFORMATION): Rename from
	_FILE_ID_BOTH_DIRECTORY_INFORMATION.
	(FILE_FULL_DIRECTORY_INFORMATION, PFILE_FULL_DIRECTORY_INFORMATION,
	FILE_ID_FULL_DIRECTORY_INFORMATION, PFILE_ID_FULL_DIRECTORY_INFORMATION,
	FILE_BOTH_DIRECTORY_INFORMATION, PFILE_BOTH_DIRECTORY_INFORMATION,
	FILE_ID_BOTH_DIRECTORY_INFORMATION,
	PFILE_ID_BOTH_DIRECTORY_INFORMATION): Explicitely typedef in a new
	block.  Add comment to describe as being outdated.

2012-11-13  Corinna Vinschen  <vinschen@redhat.com>

	* winternl.h (SYSTEM_BASIC_INFORMATION): Change type of address
	members to match 64 bit systems.
	(SYSTEM_PAGEFILE_INFORMATION): New type.
	(SYSTEM_INFORMATION_CLASS): Reformat for readability.  Add
	SystemPagefileInformation.

2012-10-11  Corinna Vinschen  <vinschen@redhat.com>

	* winioctl.h (DEVICE_TYPE): Define only if not already defined.
	* winternl.h (DEVICE_TYPE): Define as ULONG if not already defined.

2012-10-11  Corinna Vinschen  <vinschen@redhat.com>

	* winternl.h: Throughout, use NTAPI instead of WINAPI.
	(enum _FSINFOCLASS): Define.
	(struct _FILE_FS_VOLUME_INFORMATION): Define.
	(struct _FILE_FS_LABEL_INFORMATION): Define.
	(struct _FILE_FS_SIZE_INFORMATION): Define.
	(struct _FILE_FS_DEVICE_INFORMATION): Define.
	(struct _FILE_FS_ATTRIBUTE_INFORMATION): Define.
	(struct _FILE_FS_FULL_SIZE_INFORMATION): Define.
	(struct _FILE_FS_OBJECTID_INFORMATION): Define.
	(NtFsControlFile): Declare.
	(NtQueryVolumeInformationFile): Declare.
	(NtSetInformationFile): Declare.