@@ -1,3 +1,8 @@
+2012-12-12  Corinna Vinschen  <vinschen@redhat.com>
+
+	* winnt.h: Drop inclusion of mmintrin.h, emmintrin.h, and
+	pmmintrin.h on Cygwin.
+
 2012-12-07  Jason Hood  <adoxa@users.sourceforge.net>
 
 	* winbase.h (LOAD_LIBRARY_AS_IMAGE_RESOURCE): Fix typo.
